Version (0.13.2)
================
* Fix problem with numpy 18 array scalar contiguousness

Version (0.13.1)
=================
* Guard error due to mishandling of interleaved memory buffer (#60)
* Update to use Numba 0.12.1
* Fix powi bug

Version (0.13)
==============
* Add print statement for strings and scalar numeric types for debugging on GPU
* Add constant and local memory array allocation on GPU
* Add debug mode for GPU
* Allow raising exception classes on GPU
* Update CUDA toolkit libraries
* Fix boolean mapping


Version (0.12.7)
================
* Fix major bug that mistreats py2 division as inplace floor-division for real numbers.
* Fix using of array as argument of a CUDA device function.
* Delay initialization the CUDA subsystem upon first import of the cuda package.
* Add docstrings.


Version (0.12.6)
================
* Fix major bug that mistreats py2 division as floor-division for real numbers.

Version (0.12.5)
================
* Update to Numba 0.10.2
* Update to LLVM 3.3
* Various bug fixes

Version (0.12.4)
================
* Update to Numba 0.10.0
* Minor bug fixes

Version (0.12.3)
================
* Accept older driver by defering driver error to first use of specific API
* Report incompatible GPU at context creation
* Improve device information reporting
* Autotuning base on compiler info and occupancy calculator
* Add basic support for ravel and reshape

Version (0.12.2)
================
* Distribute CUDA toolkit in Anaconda
* Better error message
* Fix gufunc signature parsing to accept trailing comma.
* Fix CUDA driver log info bug
* Support JIT linking

Version (0.12.1)
================
* Fix libNVVM search path (now accept directory path)
* Fix sign-extension error in forloop precondition
* Fix support for true-division

Version (0.12.0)
================
* Use CUDA 5.5rc
* Expand math support through CUDA NVVM libdevice
* Rewritten nopython mode for CUDA-Python
* Removed experimental CU API
* Removed minivectorize

Version (0.11.0)