@@ -2,6 +2,8 @@ from numba.targets.descriptors import TargetDescriptor
 from numba.targets.options import TargetOptions
 from numba.targets.registry import target_registry
 from numba.npyufunc import Vectorize, GUVectorize
+from .error import CudaSupportError, NvvmSupportError
+
 #
 # Public
 #
@@ -9,16 +11,20 @@ last_error = None
 
 _is_initialize = False
 
+
+def initialize_gpu_target():
+    _init_numba_jit_registry()
+
+
 def initialize():
     "Safe to run multiple times"
     global _is_initialize
-    if _is_initialize: return
-    from .error import CudaSupportError, NvvmSupportError
+    if _is_initialize:
+        return _is_initialize
     global last_error
     try:
         _init_driver()
         _init_nvvm()
-        _init_numba_jit_registry()
         _is_initialize = True
         return True
     except CudaSupportError, e:
@@ -29,6 +35,12 @@ def initialize():
         last_error = e
         _init_poison_jit_registry()
         return False
+
+
+def ensure_cuda_support():
+    if not initialize():
+        raise CudaSupportError("CUDA not supported")
+
 #
 # Privates
 #
@@ -47,6 +59,7 @@ class CUDADispatcher(object):
 
     def __init__(self, py_func, locals={}, targetoptions={}):
         assert not locals
+        ensure_cuda_support()
         self.py_func = py_func
         self.targetoptions = targetoptions
         self.doc = py_func.__doc__
@@ -111,9 +124,9 @@ def _init_numba_jit_registry():
     Vectorize.target_registry['gpu'] = CudaVectorize
     GUVectorize.target_registry['gpu'] = CudaGUFuncVectorize
 
+
 def _init_poison_jit_registry():
-    # def poison(*args, **kws):
-    #     raise last_error
-    target_registry['gpu'] = CUDAPoison
-    Vectorize.target_registry['gpu'] = CUDAPoison
-    GUVectorize.target_registry['gpu'] = CUDAPoison
+    del target_registry['gpu']
+    del Vectorize.target_registry['gpu']
+    del GUVectorize.target_registry['gpu']
+
