@@ -1,6 +1,7 @@
 Version (0.13.2)
 ================
 * Fix problem with numpy 18 array scalar contiguousness
+* Fix CUDA target auto initialization on `import numbapro`
 
 Version (0.13.1)
 =================
